# openai-batch-jsonl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml
objsonl/: __init__.py  builder.py  model.py  test_builder.py  test_model.py
objsonl/model/: input.py  output.py  test_input.py  test_output.py
sample/: error.jsonl  input.jsonl  output.jsonl
